testing/errors/nopseudopccontext1.a
;ACME 0.96.5
	a = &c
